Моя сетка для сайта

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/grid.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-lg-2">
+        <div class="col-12 col-lg-2" >
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+          quisquam accusantium. Debitis ullam alias consequatur repellat. Tempore
+          incidunt illum odit repellat iste molestiae accusantium necessitatibus,
+          nam eaque aliquid voluptatem temporibus perspiciatis molestias ullam non
+          rerum quasi laudantium dolore sit tenetur aut maiores? Illo soluta iste
+          minus illum, obcaecati veniam laboriosam necessitatibus animi, eum nulla
+          ad dignissimos corrupti itaque iure maxime cum pariatur possimus omnis
+          sit quos amet? Similique qui sit placeat blanditiis cum iusto tempora
+          obcaecati, debitis veniam provident totam saepe laborum sint nostrum
+          animi eius. Praesentium aspernatur magnam deserunt soluta, laudantium
+          ipsum harum aliquid dolore, eaque quo nesciunt ex!
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam,
         quisquam accusantium. Debitis ullam alias consequatur repellat. Tempore
         incidunt illum odit repellat iste molestiae accusantium necessitatibus,
@@ -38,7 +51,7 @@
         animi eius. Praesentium aspernatur magnam deserunt soluta, laudantium
         ipsum harum aliquid dolore, eaque quo nesciunt ex!
       </div>
-      <div class="col-12 col-sm-6 col-md-3 col-lg-2" >
+      <div class="col-12 col-sm-6 col-md-3 col-lg-2">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam,
         quisquam accusantium. Debitis ullam alias consequatur repellat. Tempore
         incidunt illum odit repellat iste molestiae accusantium necessitatibus,
@@ -51,6 +64,34 @@
         animi eius. Praesentium aspernatur magnam deserunt soluta, laudantium
         ipsum harum aliquid dolore, eaque quo nesciunt ex!
       </div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2" >
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+        quisquam accusantium. Debitis ullam alias consequatur repellat. Tempore
+        incidunt illum odit repellat iste molestiae accusantium necessitatibus,
+        nam eaque aliquid voluptatem temporibus perspiciatis molestias ullam non
+        rerum quasi laudantium dolore sit tenetur aut maiores? Illo soluta iste
+        minus illum, obcaecati veniam laboriosam necessitatibus animi, eum nulla
+        ad dignissimos corrupti itaque iure maxime cum pariatur possimus omnis
+        sit quos amet? Similique qui sit placeat blanditiis cum iusto tempora
+        obcaecati, debitis veniam provident totam saepe laborum sint nostrum
+        animi eius. Praesentium aspernatur magnam deserunt soluta, laudantium
+        ipsum harum aliquid dolore, eaque quo nesciunt ex!
+      </div>
+      <div class="col-12 col-lg-2" >
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+        quisquam accusantium. Debitis ullam alias consequatur repellat. Tempore
+        incidunt illum odit repellat iste molestiae accusantium necessitatibus,
+        nam eaque aliquid voluptatem temporibus perspiciatis molestias ullam non
+        rerum quasi laudantium dolore sit tenetur aut maiores? Illo soluta iste
+        minus illum, obcaecati veniam laboriosam necessitatibus animi, eum nulla
+        ad dignissimos corrupti itaque iure maxime cum pariatur possimus omnis
+        sit quos amet? Similique qui sit placeat blanditiis cum iusto tempora
+        obcaecati, debitis veniam provident totam saepe laborum sint nostrum
+        animi eius. Praesentium aspernatur magnam deserunt soluta, laudantium
+        ipsum harum aliquid dolore, eaque quo nesciunt ex!
+      </div>
+      
+     
     </div>
   </div>
   </body>
